# GPGPU_IMAGE

./: .gitignore  README.md
cpu-sources/: CMakeLists.txt  generate_vid.sh  main.cc  main.cpp
cpu-sources/includes/: imagePng.h
cpu-sources/includes/color/: featuresExtraction.h  featuresExtractionC.h  similarityMeasuresC.h
cpu-sources/includes/texture/: featuresExtractionT.h  grayscale.h  similarityMeasuresT.h
cpu-sources/includes/utility/: choquet.h  image.h  imagePng.h  png_utility.h  utility.h
cpu-sources/sources/: CMakeLists.txt  imagePng.cpp
cpu-sources/sources/color/: featuresExtraction.cpp  featuresExtractionC.cpp  similarityMeasures.cpp  similarityMeasuresC.cpp
cpu-sources/sources/texture/: featuresExtractionT.cpp  grayscale.cpp  similarityMeasuresT.cpp
cpu-sources/sources/utility/: CMakeLists.txt  choquet.cpp  image.cc  image.cpp  image.hxx  imagePng.cc  imagePng.cpp  png_utility.cpp  utility.hxx
gpu-sources/: CMakeLists.txt  generate_vid.sh  main.cu
gpu-sources/includes/color/: similarityMeasuresC.cuh
gpu-sources/includes/texture/: featuresExtractionT.cuh  similarityMeasuresT.cuh
gpu-sources/includes/utility/: choquet.cuh  error.cuh  image.cuh  image.h  index.cuh  png_utility.cuh  png_utility.h  wrapper_gpu.cuh
gpu-sources/sources/: CMakeLists.txt
gpu-sources/sources/color/: similarityMeasuresC.cu
gpu-sources/sources/texture/: featuresExtractionT.cu  similarityMeasuresT.cu
gpu-sources/sources/utility/: choquet.cu  image.cpp  image.cu  image.cuhxx  image.hxx  index.cu  png_utility.cu
